--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,6 +3,12 @@
     margin: 0 auto;
     background-color: var(--color-grey-light-2);
     box-shadow: --shadow-dark;
+
+     @media only screen and (max-width: $bp-largest) {
+         margin: 0;
+         max-width: 100%;
+         width: 100%;
+     }
    
 }
 
@@ -14,10 +20,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+     @media only screen and (max-width: $bp-smallest) {
+         flex-wrap: wrap;
+         align-content: space-around;
+         height: 11rem;
+     }
 }
 
 .content{
     display: flex;
+
+     @media only screen and (max-width: $bp-medium) {
+         flex-direction: column;
+     }
 }
 
 .sidebar{
@@ -44,6 +60,14 @@
     background-color: var(--color-grey-light-1);
     border-bottom: var(--line);
 
+     @media only screen and (max-width: $bp-medium) {
+         padding: 3rem;
+     }
+
+     @media only screen and (max-width: $bp-small) {
+         flex-direction: column;
+     }
+
 }
 
 .description{
@@ -52,6 +76,16 @@
     padding: 3rem;
     flex: 0 0 60%;
     margin-right: 4.5rem;
+
+      @media only screen and (max-width: $bp-medium) {
+          padding: 2rem;
+          margin-right: 3rem;
+      }
+
+      @media only screen and (max-width: $bp-small) {
+          margin-right: 0;
+          margin-bottom: 3rem;
+      }
 }
 
 .section-chart {
@@ -59,4 +93,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+        flex-direction: column;
+    }
 }
